[tool.poetry]
name = "autostereograms"
version = "0.1.0"
description = ""
authors = ["fairy26 <yousei110226@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
Pillow = "^9.2.0"
imageio = "^2.21.0"
matplotlib = "^3.5.2"
ipykernel = "^6.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
